--- a/css/style_shop.css
+++ b/css/style_shop.css
@@ -236,7 +236,7 @@
  	}
  	.shop_head3 {
  	    width: 401px;
- 	    height: 25px;
+/* 	    height: 25px;*/
  	    font-size: 20px;
  	    font-weight: 700;
  	}
