--- a/css/all.css
+++ b/css/all.css
@@ -455,38 +455,32 @@ a.button32:hover:before {
 }
 .complect {
     width: 98%;
-    height: 280px;
+    height: 300px;
     border: 0px solid black;
     border-radius: 10px;
     margin: 80px 0;
     box-shadow: 0 0 3px grey;
     padding: 0 10px;
 }
-.complect span
-{
-font-family: sans-serif;
+.complect span {
+    font-family: sans-serif;
     font-weight: 600;
-   
-    
 }
-.complect h4
-{
-/*    margin: 2px 10px 0 0 ;*/
-/*background-color: beige;*/
-/*    box-shadow: 0 0 1px grey;*/
+.complect h4 {
+    /*    margin: 2px 10px 0 0 ;*/
+    /*background-color: beige;*/
+    /*    box-shadow: 0 0 1px grey;*/
 }
-.plus
-{
-/*height: 100%;*/
+.plus {
+    /*height: 100%;*/
     width: 20px;
     float: left;
     font-size: 43px;
-color: grey;
-padding: 70px 10px;
+    color: grey;
+    padding: 70px 10px;
 }
-.right_complect
-{
-/*border: 1px solid black;*/
+.right_complect {
+    /*border: 1px solid black;*/
     border-radius: 5px;
     float: right;
     height: 87%;
@@ -494,23 +488,26 @@ padding: 70px 10px;
     box-shadow: 0 0 5px grey;
     width: 130px;
 }
-.right_complect span
-{
+.right_complect span {
     font-weight: 100;
     font-size: 14px;
     display: block;
-    margin: 5px 2px  0 10px;
-    
+    margin: 5px 2px 0 10px;
 }
-.item_name
+.item_name {
+    height: 70px;
+}
+.item_name + span
 {
-height: 55px;
+    display: block;
+margin: 5px 0;
 }
+
 .main_item {
-    margin: 5px 10px;
+    margin: 18px 0px 5px 10px;
     float: left;
     width: 150px;
-/*    box-shadow: 0 0 3px grey;*/
+    /*    box-shadow: 0 0 3px grey;*/
 }
 .complect_item {
     margin: 5px 10px;
@@ -522,12 +519,91 @@ height: 55px;
     height: auto;
 }
 .image_complect img {
-     height: 150px;
+    height: 150px;
     max-height: 150px;
     max-width: 150px;
 }
 .head_top {
     height: 73px;
+}
+.button_bay {
+    padding: 4px 21px;
+    margin: 29px 14px;
+    background-color: #15db15;
+    border-radius: 5px;
+    color: #ffffff;
+    font-weight: bold;
+}
+.form_buy {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    opacity: 0.7;
+    top: 0;
+    left: 0;
+    background-color: #000;
+    z-index: 200;
+}
+.zakaz {
+    display: none;
+    position: fixed;
+    margin:-275px 0 0 -250px;
+    top: 50%;
+    left: 50%;
+    width: 500px;
+    height: 550px;
+    background-color: #006c9f;
+    opacity: 1;
+    z-index: 300;
+    border-radius: 7px;
+    box-shadow: 0 0 5px #ffffff;
+}
+.form_name
+{
+margin: 25px 20px;
+/*float: left;*/
+    clear: left;
+    
+}
+.form_name_button{
+     position: absolute;
+    right: 20px;
+    bottom: 10px;
+/*float: right;*/
+clear: right;
+
+    
+}
+.form_name_button input
+{  background-color: #15db15;
+ padding: 10px 15px;
+     color: white;
+    font-size: 1.4em;
+    border-radius: 9px;
+}
+
+.form_name_button_cancel{
+   
+     position: absolute;
+    left: 20px;
+    bottom: 10px;
+/*float: left;*/
+clear: right;
+/*    margin:10px 20px;*/
+}
+.form_name_button_cancel input{
+     background-color: #ffffff;
+    color: #000000;
+    font-size: 1.1em;
+padding: 5px 10px;
+     border-radius: 5px;
+}
+.opisanie_zakaza{
+    color: #fff;
+margin:  10px 20px;
+    float: left;
+    clear: right;
 }
 #primary_nav_wrap {
     margin-top: 15px
@@ -583,4 +659,23 @@ height: 55px;
 }
 #primary_nav_wrap ul li:hover > ul {
     display: block
+}
+#general_price {
+    color: dimgrey;
+    font-weight: bold;
+    border-radius: 3px;
+    margin: 5px 2px 2px 10px;
+}
+#econom {
+    color: #d02727;
+    font-weight: bold;
+    border-radius: 3px;
+    margin: 5px 2px 2px 10px;
+}
+#prise_you {
+    font-size: 1.2em;
+    color: #000000;
+    font-weight: bold;
+    border-radius: 3px;
+    margin: 15px 2px 2px 10px;
 }
