--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2295,7 +2295,7 @@ table th[class*="span"],
 }
 .dropdown-menu {
     position: absolute;
-    top: 100%;
+/*    top: 100%;*/
     left: 0;
     z-index: 1000;
     display: none;
