--- a/css/menu.css
+++ b/css/menu.css
@@ -1,11 +1,3 @@
-/*
-        body {
-            font: 13px/16px arial, sans-serif;
-            color: rgb(51, 51, 51);
-            padding-top: 60px;
-        }
-*/
-
 .nav{
 /*background-color: #fff;*/
 /*color: #444;*/
@@ -21,6 +13,7 @@ text-align: left;
 text-decoration: none;
 text-transform: none;
 word-spacing: 0;
+    width: 100%;
 
 }
 
