--- a/admin/css/css.css
+++ b/admin/css/css.css
@@ -1,7 +1,8 @@
 body {
 	
 	margin:0px; 
-	background-image:url(../images/bg_main.png)
+	background-image:url(../images/bg_main.png);
+    overflow-x: visible;
 }
 #content{  min-height:800px; width:970px; margin-left:20px; float:left;}
 #top_left {
@@ -148,7 +149,7 @@ cursor:pointer;
 /*стили для редактора товаров и категорий */
 .check_items{ 
    
-    position: fixed;
+/*    position: fixed;*/
     left: 1658px;
     font-size: 35px;
     bottom: 720px;
@@ -158,7 +159,7 @@ background-color: aquamarine;
 border-radius: 8px;
 box-shadow: 0 0 10px rgba(0,0,0,0.5); /* Параметры тени */}
 .select_items{
-position: fixed;
+/*position: fixed;*/
     left: 1300px;
     width: 550px;
     height: 510px;
@@ -179,7 +180,8 @@ width: 140px;
 width: 50px;
 }
 #add_product
-{position: fixed;
+{
+/*    position: fixed;*/
  left: 1510px;
     bottom: 95px;
     padding: 15px 20px;
@@ -187,9 +189,14 @@ width: 50px;
 
 }
 #hide {
-position: fixed;
-    bottom: 740px;
-    left: 1295px;
+position: absolute;
+top:1588px;
+left: 980px;
+}
+#fixed{
+position: absolute;
+top:1588px;
+left: 729px;
 }
 #view{
 width: 50px;
