--- a/css/all.css
+++ b/css/all.css
@@ -825,6 +825,34 @@ float:right;
 .name_confirm_buy{
 margin: 10px 0px;
 }
+
+
+.loading {
+position: relative;
+    top: 50%;
+    left: 50%;
+  width: 0;
+  padding: 12px;
+  background-image:
+   radial-gradient(circle at 0% 0%, transparent 40%, rgb(0,255,0) 40%, rgb(0,255,0) 70%, transparent 70%),
+   radial-gradient(circle at 100% 0%, transparent 40%, rgba(0,255,0,.2) 40%, rgba(0,255,0,.2) 70%, transparent 70%),
+   radial-gradient(circle at 100% 100%, transparent 40%, rgba(0,255,0,.2) 40%, rgba(0,255,0,.2) 70%, transparent 70%),
+   radial-gradient(circle at 0% 100%, transparent 40%, rgba(0,255,0,.2) 40%, rgba(0,255,0,.2) 70%, transparent 70%);
+  background-repeat: no-repeat;
+  background-size: 50% 50%;
+  background-position: 100% 100%, 0 100%, 0 0, 100% 0;
+  -webkit-animation: loading1 linear .7s infinite;
+  animation: loading1 linear .7s infinite;
+
+
+
+}
+@-webkit-keyframes loading1 {
+  100% {-webkit-transform: rotate(360deg);}
+}
+@keyframes loading1 {
+  100% {transform: rotate(360deg);}
+}
 #primary_nav_wrap {
     margin-top: 15px
 }
